--- a/сайт/lab 3.html
+++ b/сайт/lab 3.html
@@ -3,7 +3,16 @@
     <meta charset="utf-8"> 
 	<title>Сайт web-студії "Web-DECO"</title> 
 </HEAD>
-<BODY background="images/bg.jpg">
+ <BODY background="images/bg.jpg">
+   <table border="1" align="center" cellpadding="10">
+		 <tr> 
+			<td background="images/bg-3.jpg" colspan="2" height="150" align="right" hspace="5">
+				<!-- 03  Заголовок -->
+			 <img src="images/logo.png" height="100" width="100" align="left" >	
+				<font color="Maroon"><h1 class="shadowtext">Сайт студії "Web-DECO"</h1></font>
+				
+			</td>
+		</table>
 
-</BODY>
+  </BODY>
 </HTML>
